public/index.css
/* This file houses the customized formatting for app */


/* This accounts for extra white space on right side of page*/
html,body {  
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
    scroll-behavior: smooth;
}

/* This didn't actually have an effect on this particular project, 
but it can help with removing any pre-set spacing on page that may be messing with your code */
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  /* give everything inherit for box sizing, and set the body to border-box */
  /* this makes it easier to change box-sizing properties for other things
  if the situation ever arises */
  box-sizing: inherit; }


body {
    font-family: "Inter", sans-serif;
    color: #313131;
}

h3 {
    font-family:"Inter", sans-serif;
}

.navbar{
    min-height: 3rem;
    height: 5vh;
    background-color: #2c2d2e;
    font-weight:bold;
    color: #EAE1E1 !important;
    font-family:"Amiko", sans-serif;
}
.navbar-nav > li{
    padding-left: 1rem;
    padding-right: 1rem;
    color: #EAE1E1 !important;
}

.navbar-brand img {
    max-width: 30px;
    
}

/* Landing Page */
/* I opted for flexbox over the grid because it is inherently responsive */
#landingScreen {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80vh;
    background-color: #2c2d2e;
    background-image: url("hexagons_transparent.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
#landingScreen-contentWrapper{
    line-height: 1.75rem;
}

#jcName{
    font-family:"Amiko", sans-serif;
    color: rgb(231, 88, 85);
    font-size: xx-large;
    font-weight: bold;
}

#jcDescription{
    color: #EAE1E1;
    font-size: x-large;
    text-align: left;
    font-family: "Amiko", sans-serif;
}

/* Down Arrow from Landing page to Projects section */
.arrow-section {
    background-color: #2c2d2e;
    font-weight:bold;
    text-align: center;
    height: 10vh;    
    display: flex;
    width: 100%;
}
.arrow-button {
    color: rgb(231, 88, 85);
    font-size: 1.7rem;
    align-self: flex-end;
    animation-duration: 2s;
    animation-iteration-count: infinite;
    height: 100px;
    margin: 0 auto 0 auto;
    transform-origin: bottom;
    width: 100px;
}
.arrow-button:hover {
    color: white;
}
.bounce{
    animation-name: bounce;
    animation-timing-function: ease;
}
@keyframes bounce {
    0%   { transform: translateY(0); }
    50%  { transform: translateY(-30px); }
    100% { transform: translateY(0); }
}

#about-section{
    display:flex;
    flex-wrap: wrap;
    padding: 4rem;
}
#about-text{
    text-align: center;
    align-self: center;
    padding-top: 1rem;
    padding-bottom: 4rem;
    padding-right: 2rem;
    padding-left: 2rem;
    font-size: 1.1rem;
}
#about-image{
    display: flex;
    justify-content: center;
    align-items: center;  

}

/* Skills Page */
#skills-screen {
    background-color: #F5EDED;
}
#skills-section{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding-top: 1rem;
    padding-right: 0.5rem;
    padding-left: 0.5rem;
}
#skill-box {
    text-align: center;
    width: 7rem;
    padding-right: 1.3rem;
    padding-left: 1.3rem;
    padding-bottom: 2rem;
    padding-top: 1rem;
}
.skill-icon{
    font-size: 3.7rem;   
}

/* Projects Page */
#projects-section{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-bottom: 5rem;
    padding-top: 1.7rem;
}
.project-box {
    box-shadow: 0px 2px 8px 0px rgba(158, 156, 156, 0.938);
    text-align: center;
    border-radius: 0.5rem;
    position: relative;
    overflow: hidden;
    width: 320px;
    margin-bottom: 3rem;
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    
    transition: 1s ease;
    cursor: pointer;
}
.banner-img1 {
    position: relative;
    background-image: url("login-app.png");
    height: 14rem;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.banner-img2 {
    position: relative;
    background-image: url("Nucamp-app1.png");
    height: 14rem;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.banner-img3 {
    position: relative;
    background-image: url("grocerylist-1.png");
    height: 14rem;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.banner-img4 {
    position: relative;
    background-image: url("newquote.png");
    height: 14rem;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.project-name {
    font-size: 1.7rem;
    margin-top: 2rem;
}
.project-description{
    margin: 1rem 2rem;
    color: rgb(114, 114, 114);
    font-size: 1rem;
    margin-bottom: 2rem;
    margin-left: 2rem;
    margin-right: 2rem;
}
.proj-btn {
    margin-bottom: 2rem;
}
.project-box:hover{
    transform: scale(1.1);
    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
}

/* Contact Page */
#contact-screen{
    background-color: #F5EDED;
}
.contact-section{
    display:flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 1rem;
}
.btn-social-icon {
    font-size: 3rem;
    padding-left: 2rem;
    padding-right: 2rem;
    color: #4aa3be;
}

#sectionTitle {
    font-family:"Amiko", sans-serif;
    font-weight: bold;
    text-align: center;
    padding-top: 6rem;
    padding-bottom: 1rem;
    padding-left: 0;
    padding-right: 0;
}

.space{
    background-color: #F5EDED;
    height: 5rem;
}

